tests/paczka1/fuzzy1/48311044.err
Error in line 5: A831 S526 31,1
Error in line 12: A831 S398 17,6
Error in line 18: wzhdOKn9i S398 50,8
